# time-management

./: Cargo.toml  README.md  test.text
src/: cli.rs  config.rs  entries.rs  errors.rs  lib.rs  main.rs  parser.rs  time_log.rs  utils.rs
src/commands/: init.rs  mod.rs  report.rs  track.rs
