[package]
name = "time-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
